<resources>
    <string name="app_name">Av</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--FRAGMENT MENU-->
    <string name="num_repressing">No. Representante:</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Si</string>

    <!--STATUS DELIVERY-->
    <string name="value_order">
        <b>Valor Pedido:</b>
    </string>
    <string name="on_route">EN RUTA</string>
    <string name="zone">
        <b>Zona:</b>
    </string>
    <string name="zone_wo_bold">
        Zona:
    </string>
    <string name="no_repre">No. Representante:</string>
    <string name="name">Name</string>
    <string name="route">
        <b>Ruta:</b>
    </string>
    <string name="campaign">
        <b>Campaña:</b>
    </string>
    <string name="status_delivery">Estatus de la entrega</string>
    <string name="consult_order">Consulta tu pedido</string>
    <string name="order_status">Estatus del pedido:</string>
    <string name="button_terms">Continuar</string>
    <string name="tittle_terms">Términos y Condiciones</string>
    <string name="check_terms">Acepto términos y condiciones</string>
    <string name="forgot_password">¿Olvidates tu contraseña?</string>
    <string name="version">Versión</string>
    <string name="delivery">Entrega</string>
    <string name="driver_delivery">Chofer de Reparto</string>
    <string name="name_driver_delivery">Name</string>
    <string name="zone_wo_black">Zona:</string>
    <string name="route_wo_black">Ruta:</string>
    <string name="score">Calificación</string>
    <string name="address_delivery">Dirección de entrega:</string>
    <string name="address">
        <b>Dirección:</b>
    </string>
    <string name="ordered_items">El pedido consta de:</string>
    <string name="code">Código</string>
    <string name="description">Descripción</string>
    <string name="quantity">Cantidad</string>
    <string name="total_package">Total de Bultos a Entregar:</string>
    <string name="value_payment">Valor a cobrar</string>
    <string name="amount">Monto:</string>
    <string name="status_value">Pendiente</string>
    <string name="payment_type">Tipo de pago:</string>
    <string name="score_delivery">Califica tu entrega</string>
    <string name="deliveries_done">Entregas Realizadas</string>
    <string name="do_better">¿Qué deberíamos mejorar?</string>
    <string name="add_comment">Agregue un comentario</string>
    <string name="send">Enviar</string>
    <string name="with_out_order">Sin Pedido</string>
    <string name="msg_with_out_order">No tienes ningún pedido solicitado</string>
    <string name="do_order">Haz tu pedido</string>
    <string name="continueButton">Continuar</string>
    <string name="msg_question_1">¿Esta seguro que desea cerrar la sesión?</string>
    <string name="login">Entrar</string>
    <string name="help_title">¿Hay algo en lo que podamos ayudarte?</string>
    <string name="code_scanner">Escaner de códigos</string>
    <string name="put_manual_code">Ingresar código manualmente (12 ó 13 digitos)</string>
    <string name="box">Cajas</string>
    <string name="unitary">Unitarios</string>
    <string name="bundle">Bultos</string>
    <string name="scanned">Escaneados</string>
    <string name="assigned">Asignados</string>
    <string name="missing">Faltantes</string>
    <string name="total">Total</string>
    <string name="detail_delivery">Detalle de entrega</string>
    <string name="register">Registro:</string>
    <string name="to_collect">A recolectar</string>
    <string name="to_pay">
        <b>A pagar:</b>
    </string>
    <string name="remits">
        <b>Remitos:</b>
    </string>
    <string name="paid">PAGADO</string>
    <string name="order_contains">El pedido consta de:</string>
    <string name="scanner">ESCANEAR</string>
    <string name="value">
        <b>Valor:</b>
    </string>
    <string name="must_collect_remit">Debe recoger un remito</string>
    <string name="remits_contains">El remito consta de:</string>
    <string name="causes_refund">Causas de devoluciones de reparto</string>
    <string name="photography_evidence">Evidencia Fotográfica</string>
    <string name="special_delivery">Entrega Especial</string>
    <string name="status">Estatus:</string>
    <string name="mod_amount">Monto Modificado</string>
    <string name="authorization">Autorización</string>
    <string name="code_six_digits">Código de 6 dígitos</string>
    <string name="agent">Representante</string>
    <string name="user">Usuario</string>
    <string name="password">Contreseña</string>
    <string name="image_profile">image_profile</string>
    <string name="erase">Borrar</string>
    <string name="save">Guardar</string>


</resources>
