<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.ui.login.terms.TermsFragment">
    <!--<data>-->
        <!--<variable name="termsViewModel" type="net.gshp.izzi.presentation.ui.login.terms.TermsViewModel"/>-->
        <!--<import type="net.gshp.izzi.presentation.ui.utils.BindingMethods"/>-->
    <!--</data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/button_terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:text="@string/tittle_terms"
                android:textSize="@dimen/_16ssp"
                android:textColor="@android:color/black" android:fontFamily="@font/roboto"/>
        <CheckBox
                android:text="@string/check_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
        />
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/checkBox" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
            <!--android:text="@{termsViewModel.terms}"-->

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
