<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_margin="8dp"
>


    <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/edt_mod_amount"
                                                           android:layout_marginTop="16dp"
                                                           app:layout_constraintTop_toTopOf="parent"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginStart="8dp"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           android:hint="@string/mod_amount"
                                                           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                                           android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="wrap_content"
                                                                 style="@style/textSize14"
                                                                 android:inputType="numberDecimal"

        />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/lyt_code"
                  app:layout_constraintTop_toBottomOf="@+id/edt_mod_amount"
                  android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                  android:orientation="horizontal"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView android:layout_width="0dp" android:layout_height="match_parent"
                  android:id="@+id/txt_authorization"
                  android:layout_weight="0.3"
                  android:gravity="center_vertical|center_horizontal"
                  android:text="@string/authorization"
                  style="@style/textSizeTitle14"
        />

        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="match_parent"
                                                               android:id="@+id/edt_code"
                                                               android:layout_weight="0.6"
                                                               android:layout_gravity="center_vertical"
                                                               android:hint="@string/code_six_digits"
                                                               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     style="@style/textSize14"
                                                                     android:inputType="number"
                                                                     android:maxLength="6"
            />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="70dp"
                  android:id="@+id/lyt_buttons"
                  app:layout_constraintTop_toBottomOf="@+id/lyt_code"
                  android:orientation="horizontal"
                  android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton android:layout_width="0dp"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/btn_cancel"
                                                           android:text="@string/cancel"
                                                           android:layout_weight="0.5"
                                                           android:layout_marginStart="8dp"
                                                           style="@style/buttonCancel"
        />

        <com.google.android.material.button.MaterialButton android:layout_width="0dp"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/btn_ok"
                                                           android:text="@string/continueButton"
                                                           android:layout_weight="0.5"
                                                           android:layout_marginStart="16dp"
                                                           android:layout_marginEnd="8dp"
                                                           style="@style/buttonAccept"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>