<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModelWithOut" type="com.olimpo.av.withOutOrder.WithOutViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".withOutOrder.WithOutOrderFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_without_order"
                style="@style/textSizeTitle14"
                android:textAlignment="center"
                android:text="@string/with_out_order" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_percent="0.2"
                android:id="@+id/materialCardView"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_without_order">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_user"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/ic_avatar_option_3"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="10dp"
                        app:layout_constraintEnd_toStartOf="@+id/lyt_name" android:layout_marginEnd="8dp"/>

                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                              android:id="@+id/lyt_name"
                              android:orientation="vertical"
                              app:layout_constraintStart_toEndOf="@+id/image_user" android:layout_marginStart="8dp"
                              app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.012"
                              android:layout_marginTop="16dp">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/name"
                              android:lines="1"
                              style="@style/textSize16"
                              android:id="@+id/textView2"
                    />

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:id="@+id/txt_num_agent"
                              android:text="@string/no_repre"
                              android:lines="1"
                              android:layout_marginTop="8dp"
                              style="@style/textSize12"
                    />
                </LinearLayout>

                <View android:layout_width="match_parent" android:layout_height="1dp"
                      android:id="@+id/line"
                      android:background="@color/colorLine"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@id/image_user"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:textSize="@dimen/_16ssp"
                          android:text="@string/msg_with_out_order"
                          android:lines="1"
                          style="@style/textSize16"
                          android:textAlignment="center"
                          app:layout_constraintTop_toBottomOf="@+id/line"
                          android:layout_marginTop="8dp"
                          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                          android:layout_marginBottom="8dp"
                          app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent" android:layout_height="@dimen/_50ssp"
                android:text="@string/do_order"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                style="@style/buttonAccept"
                android:id="@+id/btn_make_order"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>