<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                  android:id="@+id/lyt_title_dialog"
                  app:layout_constraintHeight_percent="0.1"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  android:background="@color/colorTitleBackground"
                  android:padding="8dp"
                  android:orientation="horizontal"
    >
        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/txt_title_dialog"
                  android:textAlignment="center"
                  android:layout_marginEnd="8dp"
                  style="@style/textSizeTitle16"
                  android:text="@string/causes_refund"
        />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                               android:layout_height="0dp"
                                               android:id="@+id/rv_option_refund"
                                               app:layout_constraintHeight_percent="0.60"
                                               app:layout_constraintTop_toBottomOf="@+id/lyt_title_dialog"
                                               android:layout_marginTop="8dp"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginStart="8dp"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton android:layout_width="match_parent" android:layout_height="0dp"
                                                       android:id="@+id/btn_photo_evidence"
                                                       android:text="@string/photography_evidence"
                                                       app:layout_constraintTop_toBottomOf="@+id/rv_option_refund"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginStart="8dp"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="8dp"
                                                       app:layout_constraintHeight_percent="0.12"
                                                       app:icon="@drawable/ic_camera_gray"
                                                       app:iconGravity="textStart"
                                                       app:iconPadding="8dp"
                                                       app:iconTint="@color/colorCardView"
                                                       style="@style/buttonPhoto"

                                                       app:layout_constraintHorizontal_bias="0.0"
                                                       app:layout_constraintVertical_bias="0.0"
                                                       android:layout_marginBottom="8dp"
                                                       app:layout_constraintBottom_toTopOf="@+id/lyt_buttons"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                  android:id="@+id/lyt_buttons"
                  app:layout_constraintHeight_percent="0.13"
                  android:orientation="horizontal"
                  android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton android:layout_width="0dp"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/btn_cancel"
                                                           android:text="@string/cancel"
                                                           android:layout_weight="0.5"
                                                           android:layout_marginStart="8dp"
                                                           android:layout_marginBottom="8dp"
                                                           style="@style/buttonCancel"
        />

        <com.google.android.material.button.MaterialButton android:layout_width="0dp"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/btn_ok"
                                                           android:text="@string/continueButton"
                                                           android:layout_weight="0.5"
                                                           android:layout_marginStart="16dp"
                                                           android:layout_marginEnd="8dp"
                                                           android:layout_marginBottom="8dp"
                                                           style="@style/buttonAccept"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>